force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryAddress__c</fullName>
    <label>DELIVERY ADDRESS</label>
    <type>TextArea</type>
</CustomField>