force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryDate__c</fullName>
    <label>DELIVERY DATE</label>
    <type>Date</type>
</CustomField>