force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__DescriptionOfGoods__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DescriptionOfGoods__c</fullName>
    <label>DESCRIPTION OF GOODS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>