force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__NETWeightKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NETWeightKG__c</fullName>
    <label>NET WEIGHT(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>