force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__NotesForREPEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NotesForREPEmailTemplate__c</fullName>
    <label>NOTES FOR RFP EMAIL TEMPLATE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>