force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__PICCustomer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C OF CUSTOMER</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFP/RFQ</relationshipLabel>
    <relationshipName>RFPRFQPIC</relationshipName>
    <type>Lookup</type>
</CustomField>