force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__PickLocation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PickLocation__c</fullName>
    <label>PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>