force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__PickupAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PickupAddress__c</fullName>
    <label>PICKUP ADDRESS</label>
    <type>TextArea</type>
</CustomField>