force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__PICOfDeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICOfDeliveryDestination__c</fullName>
    <label>P.I.C OF DELIVERY DESTINATION</label>
    <type>TextArea</type>
</CustomField>