force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__PICOfPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICOfPickupLocation__c</fullName>
    <label>P.I.C OF PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>