force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__PODAOA__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PODAOA__c</fullName>
    <label>P.O.D(A.O.A)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>