force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__POLAOD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__POLAOD__c</fullName>
    <label>P.O.L(A.O.D)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>