force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__RateRequirement__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RateRequirement__c</fullName>
    <label>RATE REQUIREMENT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>