force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__RequiredService__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RequiredService__c</fullName>
    <label>REQUIRED SERVICE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RequiredService</valueSetName>
    </valueSet>
</CustomField>