force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__RFPREQName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RFPREQName__c</fullName>
    <label>RFP/REQ NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>