force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__RFPRFQStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RFPRFQStatus__c</fullName>
    <label>RFP/RFQ STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__WorkStatus</valueSetName>
    </valueSet>
</CustomField>