force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__RquestBy__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RquestBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REQUEST BY</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFPRFQRequester</relationshipName>
    <type>Lookup</type>
</CustomField>