force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__SubmissionTargetDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SubmissionTargetDate__c</fullName>
    <label>SUBMISSION TARGET DATE</label>
    <type>Date</type>
</CustomField>