force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/clofor_com_cfs__TELOfDeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TELOfDeliveryDestination__c</fullName>
    <label>TEL OF DELIVERY DESTINATION</label>
    <type>TextArea</type>
</CustomField>