force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed from customer</label>
    <type>Checkbox</type>
</CustomField>