force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packing / 梱包</label>
    <type>Checkbox</type>
</CustomField>