force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number/電話番号</label>
    <type>Phone</type>
</CustomField>