force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import/輸入</fullName>
            </value>
            <value>
                <fullName>Export/輸出</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>