force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/fields/Transportation_Type__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Type__c</fullName>
    <label>Transportation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEA/海上貨物</fullName>
            </value>
            <value>
                <fullName>AIR/航空貨物</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>