force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/recordTypes/clofor_com_cfs__RFPRFQFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__RFPRFQFromCustomer</fullName>
    <active>true</active>
    <label>RFP/RFQ From Customer</label>
</RecordType>