force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/recordTypes/clofor_com_cfs__RFPRFQToVendor.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__RFPRFQToVendor</fullName>
    <active>true</active>
    <label>RFP/RFQ To Vendor</label>
</RecordType>