force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__RFPREQName__c</columns>
    <columns>clofor_com_cfs__DescriptionOfGoods__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__Incoterms__c</columns>
    <columns>clofor_com_cfs__Mode__c</columns>
    <columns>clofor_com_cfs__Volume__c</columns>
    <columns>clofor_com_cfs__RquestBy__c</columns>
    <columns>clofor_com_cfs__PODAOA__c</columns>
    <columns>clofor_com_cfs__POLAOD__c</columns>
    <columns>clofor_com_cfs__ETD__c</columns>
    <columns>clofor_com_cfs__RequiredService__c</columns>
    <columns>clofor_com_cfs__RequiredInformation__c</columns>
    <columns>clofor_com_cfs__RateRequirement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>