force-app/main/default/objects/clofor_com_cfs__RFPRFQ__c/listViews/clofor_com_cfs__RFPRFQFromCustomer.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__RFPRFQFromCustomer</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__RFPREQName__c</columns>
    <columns>clofor_com_cfs__RFPRFQStatus__c</columns>
    <columns>clofor_com_cfs__Customer__c</columns>
    <columns>clofor_com_cfs__ParentRFPRFQID__c</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>clofor_com_cfs__TargetRate__c</columns>
    <columns>clofor_com_cfs__RateRequirement__c</columns>
    <columns>clofor_com_cfs__RequiredInformation__c</columns>
    <columns>clofor_com_cfs__RequiredService__c</columns>
    <columns>clofor_com_cfs__POLAOD__c</columns>
    <columns>clofor_com_cfs__PODAOA__c</columns>
    <columns>clofor_com_cfs__ETD__c</columns>
    <columns>clofor_com_cfs__ETA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__RFPRFQ__c.clofor_com_cfs__RFPRFQFromCustomer</value>
    </filters>
    <label>1.RFP/RFQ From Customer</label>
    <language>en_US</language>
</ListView>